<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.openmrs</groupId>
  <artifactId>standalone</artifactId>
  <version>2.0.0-SNAPSHOT</version>

  <name>standalone</name>
  <packaging>pom</packaging>

  <url>https://github.com/openmrs/openmrs-standalone</url>

  <modules>
      <module>pom-step-01.xml</module>
      <module>pom-step-02.xml</module>
      <module>pom-step-03.xml</module>
      <module>pom-step-04.xml</module>
      <module>pom-step-05.xml</module>
  </modules>

  <properties>

      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>1.8</maven.compiler.target>


    <ciel.dictionary.openmrs.version>2.5.5</ciel.dictionary.openmrs.version>
    <ciel.dictionary.version>20251224</ciel.dictionary.version>

    <liquibase.plugin.artifactId>liquibase-maven-plugin</liquibase.plugin.artifactId>
    <liquibase.plugin.version.4.x>4.32.0</liquibase.plugin.version.4.x>

    <liquibase.demodata.archive>large-demo-data-2-7-0.sql.zip</liquibase.demodata.archive>
    <liquibase.cieldata.filename>liquibase-ciel-data.xml</liquibase.cieldata.filename>

    <openmrs.version>2.8.3</openmrs.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tomcat.version>9.0.110</tomcat.version>
    <junitVersion>5.12.2</junitVersion>
    <mockitoVersion>3.12.4</mockitoVersion>
    <mariadb4jVersion>3.3.1</mariadb4jVersion>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.tomcat</groupId>
      <artifactId>tomcat-catalina</artifactId>
      <version>${tomcat.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat</groupId>
      <artifactId>tomcat-coyote</artifactId>
      <version>${tomcat.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat</groupId>
      <artifactId>tomcat-jasper</artifactId>
      <version>${tomcat.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <version>3.5.4</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>ch.vorburger.mariaDB4j</groupId>
      <artifactId>mariaDB4j</artifactId>
      <version>${mariadb4jVersion}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junitVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junitVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockitoVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockitoVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <version>${mockitoVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.19</version>
    </dependency>
  </dependencies>


  <build>
    <finalName>openmrs-standalone-${openmrs.version}</finalName>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/main/resources-filtered</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-property</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireProperty>
                  <property>openmrs.version</property>
                  <message>openmrs.version property is missing. This should be
                    something like 1.9.0, 1.8.3, or 1.10-alpha. Add
                    -Dopenmrs.version=1.9.1. NOTE: If building for 1.8.x, also add
                    -P1.8.x</message>
                </requireProperty>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <fork>true</fork>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <fork>true</fork>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.3</version>
          <dependencies>
            <dependency>
                <groupId>org.openmrs.web</groupId>
                <artifactId>openmrs-webapp</artifactId>
                <version>${openmrs.version}</version>
                <type>war</type>
                <scope>compile</scope>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>

        <!--This plugin's configuration is used to store Eclipse m2e settings
            only. It has no influence on the Maven build itself. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.liquibase</groupId>
                    <artifactId>
                      liquibase-maven-plugin
                    </artifactId>
                    <versionRange>
                      [${liquibase.plugin.version.4.x},)
                    </versionRange>
                    <goals>
                      <goal>update</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>
                      org.apache.maven.plugins
                    </groupId>
                    <artifactId>
                      maven-dependency-plugin
                    </artifactId>
                    <versionRange>
                      [2.3,)
                    </versionRange>
                    <goals>
                      <goal>copy</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>
                      org.codehaus.mojo
                    </groupId>
                    <artifactId>
                      exec-maven-plugin
                    </artifactId>
                    <versionRange>
                      [1.2.1,)
                    </versionRange>
                    <goals>
                      <goal>java</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore />
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>ch.vorburger.mariaDB4j</groupId>
          <artifactId>mariaDB4j-maven-plugin</artifactId>
          <version>${mariadb4jVersion}</version>
          <configuration>
            <databaseName>openmrs</databaseName>
            <args>
              <arg>--character-set-server=utf8</arg>
              <arg>--collation-server=utf8_general_ci</arg>
              <arg>--max_allowed_packet=32M</arg>
            </args>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <repositories>
    <repository>
      <id>openmrs-repo</id>
      <name>OpenMRS Nexus Repository</name>
      <url>https://mavenrepo.openmrs.org/public</url>
    </repository>
    <repository>
      <id>openmrs-contrib</id>
      <name>OpenMRS Nexus Repository</name>
      <url>https://mavenrepo.openmrs.org/contrib</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>openmrs-repo</id>
      <name>OpenMRS Nexus Repository</name>
      <url>https://mavenrepo.openmrs.org/public</url>
    </pluginRepository>
    <pluginRepository>
      <id>openmrs-contrib</id>
      <name>OpenMRS Nexus Repository</name>
      <url>https://mavenrepo.openmrs.org/contrib</url>
    </pluginRepository>
  </pluginRepositories>

</project>
